2004-09-21  Alfred M. Szmidt  <ams@kemisten.nu>

	* fsysopts.c (doc): Changed `--remount' to `--update'.

	* mount.c (argp_opts): Enabled never-enabled options and added
	long versions: --verbose/-v, --remount/--update/-u,
	--writable/-w, --readonly/-r and --options/-o.	Reported by
	Ben Asselstine.

	* mount.c (parse_opt): For -u, use "update" instead of the deprecated
	"remount" argument.

2004-03-09  Marcus Brinkmann  <marcus@gnu.org>

	* login.c (main): Remove extern declaration and invocation of
	_argp_unlock_xxx.

2004-03-14  Marcus Brinkmann  <marcus@gnu.org>

	* storeread.c (main): Call argp_usage if store is not set at
	ARGP_KEY_END.

2003-08-17  Marcus Brinkmann  <marcus@gnu.org>

	* rpctrace.c: Include <stddef.h>.
	(struct traced_info): Change type of LOCP to hurd_ihash_locp_t.
	(msgid_ihash): Change type to struct hurd_ihash, and initialize
	with HURD_IHASH_INITIALIZER, don't set cleanup here.
	(traced_names): Likewise.
	(main): Call hurd_ihash_set_cleanup for msgid_ihash.  Don't create
	traced_names.
	(parse_msgid_list): Call hurd_ihash_add instead ihash_add.
	(new_send_wrapper): Likewise.
	(msgid_info): Likewise.  Call hurd_ihash_find instead ihash_find.
	(rewrite_right): Likewise.
	(traced_dropweak): Call hurd_ihash_locp_remove instead
	ihash_locp_remove.

2003-10-26  Roland McGrath  <roland@frob.com>

	* storeread.c (doc, arg_doc): Make arrays, not pointers; make const.
	(doc): Add leading short description line before \v.

	* rpctrace.c (docs, args_doc): Make arrays, not pointers.
	(doc): Remove "\v.".  Reported by Alfred M. Szmidt <ams@kemisten.nu>.

2002-06-16  James A. Morrison  <ja2morri@uwaterloo.ca>

	* vmstat.c (vm_state_refresh): Use memset instead of bzero.
	(main): Likewise.

2002-09-17  Marcus Brinkmann  <marcus@gnu.org>

	* console-ncurses.c: File removed (the ncursesw console client is
	now a driver in the console-client).
	* Makefile: Revert 2002-08-22 change:
	Do not include`../config.make'.
	(targets) [LIBNCURSES]: Removed.